<resources>
    <string name="app_name">NJOY</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="hallo">HALLO</string>
    <string name="openmaptext">Open Map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="btn">BUTTON</string>
    <string name="hasselt">Hasselt</string>
    <string name="pukkelpop">PukkelPop</string>
    <string name="_02_01_2000">02/01/2000</string>
    <string name="ending_date">Ending date:</string>
    <string name="_01_01_2000">01/01/2000</string>
    <string name="starting_date">Starting Date:</string>
    <string name="get_list">get list</string>
    <string name="startdate">STARTDATE</string>
    <string name="enddate">ENDDATE</string>
    <string name="dateSeparator"> - </string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="city">CITY</string>
    <string name="name">NAME</string>
    <string name="location">Location:</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="given_latitude">Latitude</string>
    <string name="get_your_location">Get your location:</string>
</resources>