<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".SettingsActivity"
    android:background="@color/lightBlack">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_1"
        android:textColor="@color/lightGray"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_2"
        android:textColor="@color/lightGray"/>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_3"
        android:textColor="@color/lightGray" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_4"
        android:textColor="@color/lightGray"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:background="@color/lightBlack">

        <Button
            android:id="@+id/getListBtn"
            android:layout_width="125dp"
            android:layout_margin="6dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/lightGray"
            android:textColor="@color/lightBlack"
            android:text="@string/get_list"/>

        <Button
            android:id="@+id/openMapBtn"
            android:layout_width="125dp"
            android:layout_margin="6dp"
            android:layout_height="100dp"
            android:text="@string/openmaptext"
            android:textColor="@color/lightBlack"
            android:backgroundTint="@color/yellow"
            />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:layout_margin="6dp"
            android:backgroundTint="@color/lightGray"
            android:textColor="@color/lightBlack"
            android:text="@string/settings" />
    </LinearLayout>



</LinearLayout>