<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlack"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_1"
        android:textColor="@color/lightGray"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_2"
        android:textColor="@color/lightGray"/>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_3"
        android:textColor="@color/lightGray" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_4"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/option_4"
        android:textColor="@color/lightGray"/>

</LinearLayout>